Added Swagger setup
